# curtaincall

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATIONS.md  README.md  justfile  mkdocs.yml  putitoutthere.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  changelog.yml  docs.yml  integration.yml  lint.yml  patch-release.yml  publish.yml  release.yml  security.yml  test.yml
docs/: index.md  migrations.md
docs/api/: expect.md  locator.md  terminal.md  types.md
docs/guide/: assertions.md  fixtures.md  getting-started.md  input.md  locators.md  snapshots.md  terminal.md
notes/environments/: agents.md  remote.md
src/curtaincall/: __init__.py  ansi.py  ansi_test.py  expect.py  expect_test.py  locator.py  locator_test.py  pytest_plugin.py  pytest_plugin_test.py  snapshot.py  snapshot_test.py  terminal.py  terminal_test.py  types.py  types_test.py
tests/: conftest.py
tests/fixtures/: arrow_menu.py  colors.py  crash.py  echo.py  env_check.py  exit_code.py  hello.py  large_output.py  progress.py  resize_detect.py  signal_handler.py  slow_output.py  stderr_warning.py  table.py  unicode_output.py
tests/integration/: colors_test.py  edge_cases_test.py  expect_visible_test.py  input_test.py  plugin_test.py  progress_test.py  resize_test.py  snapshot_test.py  table_test.py  terminal_lifecycle_test.py
